loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:16: error: not found: value estSurOrange
  }else if(estSurOrange()){
           ^